release/1.6.2/VERSION.md
# 1.6.2

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.6.2```   |
| Release Time   | ```2013-07-05T13:09:02+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```legacy```   |
| sha1   | ```770572e819335b6c0a053f8378ad88eda189fc14```   |
| size   | ```109634```   |
| total size  | ```153475165```  |
| url       | ```https://launchermeta.mojang.com/v1/packages/770572e819335b6c0a053f8378ad88eda189fc14/legacy.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```b6cb68afde1d9cf4a20cbf27fa90d0828bf440a4```   |
| size   | ```4731988```   |
| url       | ```https://launcher.mojang.com/v1/objects/b6cb68afde1d9cf4a20cbf27fa90d0828bf440a4/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```01b6ea555c6978e6713e2a2dfd7fe19b1449ca54```   |
| size   | ```6134331```   |
| url       | ```https://launcher.mojang.com/v1/objects/01b6ea555c6978e6713e2a2dfd7fe19b1449ca54/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```Unavailable```   |
| version   | ```Unavailable```   |