release/1.6.4/VERSION.md
# 1.6.4

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.6.4```   |
| Release Time   | ```2013-09-19T15:52:37+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```legacy```   |
| sha1   | ```770572e819335b6c0a053f8378ad88eda189fc14```   |
| size   | ```109634```   |
| total size  | ```153475165```  |
| url       | ```https://launchermeta.mojang.com/v1/packages/770572e819335b6c0a053f8378ad88eda189fc14/legacy.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```1703704407101cf72bd88e68579e3696ce733ecd```   |
| size   | ```4745096```   |
| url       | ```https://launcher.mojang.com/v1/objects/1703704407101cf72bd88e68579e3696ce733ecd/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```050f93c1f3fe9e2052398f7bd6aca10c63d64a87```   |
| size   | ```6146738```   |
| url       | ```https://launcher.mojang.com/v1/objects/050f93c1f3fe9e2052398f7bd6aca10c63d64a87/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```Unavailable```   |
| version   | ```Unavailable```   |